--- a/package.json
+++ b/package.json
@@ -4,61 +4,71 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "seed": "ts-node scripts/seed.ts",
+    "seed:cleanup": "ts-node scripts/seed.ts --cleanup"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.2",
+    "appwrite": "^13.0.1",
+    "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-appwrite": "^0.3.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "appwrite": "^16.1.0",
-    "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
-    "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
-    "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "nativewind": "^4.1.23",
     "node-appwrite": "^14.1.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-appwrite": "^0.6.0",
-    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
     "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.10.7",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.14",
     "@types/react-test-renderer": "^18.3.0",
     "dotenv": "^16.4.7",
+    "esbuild": "^0.17.17",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~49.0.0",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "react-refresh": "~0.14.0"
+  },
+  "resolutions": {
+    "react-refresh": "~0.14.0"
   },
   "private": true
 }
